--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "option.ts",
-  "version": "0.3.0",
-  "description": "Option ~Monad for typescript, focus is on simplicity and typesafety",
-  "main": "lib/option",
-  "typings": "lib/option.d.ts",
+  "name": "space-monad",
+  "version": "1.0.0",
+  "description": "Option and Result ~Monad for typescript, focus is on simplicity and typesafety",
+  "main": "lib/index",
+  "typings": "lib/index.d.ts",
 
   "scripts": {
-    "build": "tsc option.ts --lib 'es5,es2015.core' --outDir ./lib --declaration --noImplicitAny --strictNullChecks --suppressImplicitAnyIndexErrors",
-    "pretest": "npm run build && tsc test/mocha.d.ts test/global.d.ts test/test.ts --outDir ./test --noImplicitAny --strictNullChecks",
-    "test": "mocha test/test.js --ui tdd",
+    "build": "tsc src/index.ts --lib 'es5,es2015.core' --outDir ./lib --declaration --strict",
+    "pretest": "npm run build",
+    "test": "jest",
     "prepublish": "npm run build"
   },
 
@@ -17,22 +17,52 @@
   ],
 
   "devDependencies": {
-    "typescript": "2.2.2",
-    "mocha": "3.0.2",
-    "better-assert": "1.0.1"
+    "typescript": "4.1.2",
+    "jest": "26.6.1",
+    "ts-jest": "26.4.2",
+    "@types/jest": "26.0.15",
+    "@types/node": "14.14.2"
   },
 
   "repository": {
     "type": "git",
-    "url": "git://github.com/AlexGalays/option.ts.git"
+    "url": "git://github.com/AlexGalays/space-monad.git"
   },
   "keywords": [
     "option",
+    "result",
     "monad",
     "maybe",
     "typescript"
   ],
   "author": "AlexGalays",
-  "homepage": "https://github.com/AlexGalays/option.ts",
-  "license": "MIT"
+  "homepage": "https://github.com/AlexGalays/space-monad",
+  "license": "MIT",
+
+  "jest": {
+    "transform": {
+      "^.+\\.ts$": "ts-jest"
+    },
+    "moduleFileExtensions": ["js", "ts"],
+    "testMatch": [
+      "<rootDir>/test/*.ts"
+    ],
+    "testPathIgnorePatterns": [
+      "<rootDir>/test/shouldNotCompile.ts"
+    ],
+    "globals": {
+      "ts-jest": {
+        "babelConfig": false
+      }
+    }
+  },
+
+  "prettier": {
+    "tabWidth": 2,
+    "printWidth": 110,
+    "semi": false,
+    "singleQuote": true,
+    "arrowParens": "avoid",
+    "trailingComma": "none"
+  }
 }
